--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <body>
 <div class="page">
   <header>
-    <div class="avatar">VE</div>
+    <div class="avatar"><img src="images/photo.jpg" alt="Фотография" width = 84px heigh = 84px border-radius = 8px;> </div>
     <div>
       <h1>Viacheslav Emaleev</h1>
       <p class="lead">Technical writer — This is my technical writer portfolio</p>
@@ -69,7 +69,12 @@
           <li>GitHub: https://github.com/yourusername</li>
         </ul>
       </div> -->
-
+      
+      <div class="section">
+        <h2>I made this page to showcase some samples of the texts that I have written.</h2> 
+        <!-- <p>It is written in HTML and hosted on GitHub Pages.</p>   -->
+      </div>
+      
       <div class="section">
         <h2>Skills</h2>
         <ul>
@@ -162,7 +167,8 @@
             <section class="card section">
               <h2>Managerial topics</h2>
               <a href="managerial.md" >Texts that I have written in English on the topics of management and corporate governance</a>
-              <!-- <p class="muted">Texts that I have written in English on the topics of management and corporate governance</p> -->
+              <a href="managerial.html" >Texts that I have written in English on the topics of management and corporate governance</a>
+
             </section>
 
             <div class="cv-sections">
