--- a/index.html
+++ b/index.html
@@ -86,12 +86,13 @@
 
       <div class="section">
         <h2>Languages</h2>
-        <ul><li>English — Fluent</li><li>Russian — Native</li></ul>
+        <ul><li>English — Fluent</li><li>Russian — Native</li><li>German — Intermediate</li></ul>
       </div>
 
       <div class="section">
         <h2>Interests</h2>
-        <p class="muted">English, German and Russian literature. Art history. Programming.</p>
+        <ul><li>English, German and Russian literature.</li><li>Art history.</li><li>Programming.</li></ul>
+        <!-- <p class="muted">English, German and Russian literature. Art history. Programming.</p> -->
       </div>
     </aside>
 
@@ -101,7 +102,7 @@
         <div class="cv-sections">
       <section class="card section">
          <h2>Summary</h2>
-         <p class="muted">A short professional summary (2–4 sentences) describing your experience, specializations, and career goals.</p>
+         <p class="muted">I hold a Master’s degree in International Management and a Bachelor’s in International Relations. Strong at working with processes, code, and text — allowing me to analyze systems deeply, improve operational efficiency, and communicate clearly in multilingual environments.</p>
        </section>
  
        <section class="card section experience">
@@ -166,7 +167,7 @@
           <div class="cv-sections">
             <section class="card section">
               <h2>Managerial topics</h2>
-              <a href="managerial.md" >Texts that I have written in English on the topics of management and corporate governance</a>
+              <!-- <a href="managerial.md" >Texts that I have written in English on the topics of management and corporate governance</a> -->
               <a href="managerial.html" >Texts that I have written in English on the topics of management and corporate governance</a>
 
             </section>
