--- a/managerial.html
+++ b/managerial.html
@@ -94,8 +94,8 @@
 <body>
   <div class="page">
     <nav class="cv-nav" aria-label="Navigation">
-      <a class="btn" href="README.md" title="Back to main">← Back to main</a>
-      <a class="btn" href="random.md" title="Next page">Next page →</a>
+      <a class="btn" href="index.html" title="Back to main">← Back to main</a>
+      <a class="btn" href="random.html" title="Next page">Next page →</a>
     </nav>
     <div class="container">
       <div class="column" tabindex="0" autofocus>
@@ -137,15 +137,8 @@
         <p>The global production downturn following the ubiquitous lockdowns caused a temporary dip in emissions. However, concentrations of greenhouse gasses continued to increase in 2020, reaching new record highs. Seeming more urgent and dangerous than climate change, COVID has set climate policy aside. But those problems are equally important for humanity. The climate issue is now often overlooked, but still has to be addressed. In this difficult period companies have to face the challenges presented by climate change and continue to comply with carbon neutrality goals, decreasing the rates of emissions and pollution, use of water and electricity.</p>
         <p>Thus, from evaluating the impact of COVID on the overall business environment we can state that there has been a strong change in externalities all over the world. Companies worldwide should re-evaluate their SDG tracks for them to stay relevant and be impactful in the long run.</p>
         <p><strong>Conclusion</strong><br /> As a conclusion of the theoretical part of the study, we can draft a list of the theoretical outtakes, which consists of possible changes in corporate SDG strategies or sustainability strategies. It looks like this:</p>
-        <ol>
-        <li>more attention to sustainability overall</li>
-        <li>addressing the state regulations</li>
-        <li>addressing the post-covid state of Decent work and economic growth (new labor policies)</li>
-        <li>addressing the post-covid state of Industry, innovation and infrastructure (Supply-chain policy change, digitalization, R&amp;D)</li>
-        <li>addressing the post-covid state of Gender equality</li>
-        <li>addressing the post-covid state of Good health and well-being for all</li>
-        <li>addressing the post-covid state of Climate action</li>
-        </ol>
+        <p>...</p>
+
       </div>
 
       <div class="column" tabindex="0">
